test/good/23.zls

let oi = 1.0

let hybrid f () = o where
  rec match true with
      | true -> do der o = 1.0 done
      | false -> do der o = 2.0 done
  and init o = oi
  and z1 = up(o -. 2.0)
  and z2 = up(o -. 3.0)

let hybrid main () =
  let o = f () in
  ()

