test/bad/t0013.zls
(* pour tester ../../bin/zeluc.byte -i -v -I ../../lib t13.zls *)
(* pour debugger
   set arguments -I ../lib ../test/good/t13.zls *)

let hybrid sliding () = (x, y) where
 rec match y >= 0.0 with
        | true -> do der x= 1.0 and der y = -1.0 done
        | false -> do der x = 1.0 and der y = 1.0 done
    and init x = 1.0 and init y = 1.0
